Water tab: Made it so crystals don't change size when dropped in the play area
Water tab: Disabled box2d DebugDraw by default
Water tab: Factored out SucroseCrystalNode
Water tab: Remove overlapping water molecules when sucrose crystal is added to the model
Water tab: Add sucrose to the model when dropped
Water tab: Improved performance by decreasing probability of interaction
Water tab: Removed unused code
Water tab: Use correct scale for atoms/molecules/crystals
Water tab: Use the correct angle for H2O
Water tab: Made bucket contents smaller, but crystals grow to full size when grabbed out of the bucket
Water tab: Coulomb’s law should be in model coordinates not box2d coordinates
Water tab: Sucrose grows and moves in front of the bucket when grabbed
Water tab: Fixed location of sugar within bucket
Water tab: Added rotation and torque
Water tab: Added charges for particles
Water tab: Set the jbox2d position of the atoms within the molecule
Water tab: Updated to jbox2d-2.1.2 and added debug draw
Water tab: Refactored to use Box2DAdapter
Water tab: Zoomed in on new model coordinates
Water tab: Rewrote particle window and started converting graphics and model to reuse code from micro tab
Water tab: Reduced the size of the sucrose bucket icon, Rewrote sugar crystal graphic to use micro tab nodes
Water tab: Made buckets smaller
# 0.00.91 (55292) Aug 16, 2011
Micro tab: Require some time to pass since each crystallization event so it isn't too jumpy
Micro tab: Require crystallization and prevent dissolving when water volume <=  0.03E-23L
Water tab: Switched to unicode figure dash for partial charge minus sign, looks longer and further away from delta symbol
Parse command line args for a directive like "-module 2" which will set that as the startup module (0-based indices)
# 0.00.90 (55254) Aug 15, 2011